--- a/stock-service/src/main/resources/application.yml
+++ b/stock-service/src/main/resources/application.yml
@@ -9,5 +9,10 @@ spring:
           brokers: localhost:9091,localhost:9092,localhost:9093
           zkNodes: localhost:2181,localhost:2182,localhost:2183
 
+      bindings:
+        new-stock-out-0:
+          destination: new-stock-topic
+
+
 server:
   port: 8081
